local storage, views, footer

--- a/views/tracklist.html
+++ b/views/tracklist.html
@@ -1,8 +1,12 @@
+<a href="#" class="small button x-tracklist__to-vk">Import selected to VK.com</a>
+<br>
+<br>
 <table>
     {{#tracks}}
         <tr>
-            <td>{{name}}</td>
-            <td><input type="checkbox"></td>
+            <td>{{artist}} &mdash; {{title}}</td>
+            <td><input type="checkbox" checked></td>
         </tr>
-    {{/items}}
+    {{/tracks}}
 </table>
+<a href="#" class="small button x-tracklist__to-vk">Import selected to VK.com</a>
