paging, views.js bugfix

--- a/views/tracklist.html
+++ b/views/tracklist.html
@@ -1,6 +1,5 @@
-<a href="#" class="small button x-tracklist__to-vk">Import selected to VK.com</a>
-<br>
-<br>
+<div class="four columns offset-by-eight"><a href="#" class="small button x-tracklist__to-vk">Import selected to VK.com</a></div>
+<br><br><br>
 <table>
     {{#tracks}}
         <tr>
@@ -9,4 +8,4 @@
         </tr>
     {{/tracks}}
 </table>
-<a href="#" class="small button x-tracklist__to-vk">Import selected to VK.com</a>
+<div class="four columns offset-by-eight"><a href="#" class="small button x-tracklist__to-vk">Import selected to VK.com</a></div>
